# SIN-Code-Marketplace-Skill

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  SKILL.md  pyproject.toml  pyproject.toml.doc.md
.github/workflows/: ceo-audit.yml
scripts/: marketplace-install.sh  marketplace-install.sh.doc.md  marketplace-list.sh  marketplace-list.sh.doc.md  marketplace-remove.sh  marketplace-remove.sh.doc.md  marketplace-search.sh  marketplace-search.sh.doc.md  marketplace-sync.sh  marketplace-sync.sh.doc.md  marketplace-update.sh  marketplace-update.sh.doc.md
src/sin_marketplace/: __init__.py  __init__.py.doc.md  catalog.py  catalog.py.doc.md  cli.py  cli.py.doc.md  installer.py  installer.py.doc.md  registry.py  registry.py.doc.md  server.py  server.py.doc.md  updater.py  updater.py.doc.md
src/sin_marketplace/cli_shims/: __init__.py  marketplace_info.py  marketplace_install.py  marketplace_list.py  marketplace_remove.py  marketplace_search.py  marketplace_sync.py  marketplace_update.py
tests/: conftest.py  conftest.py.doc.md  test_catalog.py  test_catalog.py.doc.md  test_cli.py  test_cli.py.doc.md  test_init.py  test_init.py.doc.md  test_installer.py  test_installer.py.doc.md  test_integration.py  test_integration.py.doc.md  test_registry.py  test_registry.py.doc.md  test_scripts.py  test_scripts.py.doc.md  test_server.py  test_server.py.doc.md  test_updater.py  test_updater.py.doc.md
