# Purpose: SIN Marketplace Skill package metadata and dependencies
# Docs: pyproject.toml.doc.md
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sin-marketplace-skill"
version = "0.1.0"
description = "SIN Marketplace Skill — MCP-based skill management for OpenSIN-Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "OpenSIN-Code", email = "agent@opensin.ai"}
]
keywords = ["opencode", "mcp", "skill", "marketplace", "open-source"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
    "GitPython>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
sin-marketplace = "sin_marketplace.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "C4", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/sin_marketplace --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/sin_marketplace"]

[tool.hatch.build.targets.wheel]
packages = ["src/sin_marketplace"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
